fix img promotions

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<div class="first__wrap">
 				<h1 class="first__title" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">КУРОЧКА ГРИЛЬ
 					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
-				<button data-link="#third" class="first__button" data-aos="zoom-in" data-aos-delay="1200"
+				<button data-link="#third" class="first__button link-btn" data-aos="zoom-in" data-aos-delay="1200"
 					data-aos-offset="0">ПОПРОБУЙ</button>
 			</div>
 		</section>
@@ -156,294 +156,10 @@
 					<img src="images/system_img/Second_section/Слой 13 копия-min.png" alt=""
 						class="parallax-img parallax-img-right-bottom" data-bottom="70" data-right="30"
 						style="bottom: 70px; right: 30px;" data-aos="fade-down" data-aos-duration="700">
-					<!-- <h3 class="third__title">нашi страви</h3>
-					<div class="third__items-wrap">
-						<div class="third__item item-third">
-							<a href="popup-first" class="item-third__img ibg popup__link"><img
-									src="images/system_img/Third_section/01.png" alt=""></a>
-							<a href="popup-first" class="item-third__name popup__link">курица</a>
-							<div class="item-third__price-weight">
-								<span class="item-third__weight">320 грамм</span>
-								<span class="item-third__price">120 грн</span>
-							</div>
-							<div class="item-third__count-wrap">
-								<button class="item-third__count-btn">+</button>
-								<p class="item-third__count-value">99</p>
-								<button class="item-third__count-btn">-</button>
-							</div>
-							<button class="item-third__add-btn">ДОБАВИТЬ</button>
-						</div>
-						<div class="third__item item-third">
-							<a href="popup-second" class="item-third__img ibg popup__link"><img
-									src="images/system_img/Third_section/02.png" alt=""></a>
-							<a href="popup-second" class="item-third__name popup__link">КРАФТОВОЕ пиво “ЦИПА”</a>
-							<div class="item-third__price-weight">
-								<span class="item-third__weight">1 литр</span>
-								<span class="item-third__price">120 грн</span>
-							</div>
-							<button href="popup-second" class="item-third__add-btn popup__link">ПОДРОБНЕЙ</и>
-						</div>
-					</div>
-					<div class="third__items">
-						<h3 class="third__title">бокси з собою</h3>
 
-						<div class="third__items-wrap">
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-							<div class="third__item item-third">
-								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-								<p class="item-third__name">курица</p>
-								<div class="item-third__price-weight">
-									<span class="item-third__weight">320 грамм</span>
-									<span class="item-third__price">120 грн</span>
-								</div>
-								<div class="item-third__count-wrap">
-									<button class="item-third__count-btn">+</button>
-									<p class="item-third__count-value">99</p>
-									<button class="item-third__count-btn">-</button>
-								</div>
-								<button class="item-third__add-btn">ДОБАВИТЬ</button>
-							</div>
-						</div>
-					</div> -->
+
 				</div>
-				<a href="" class="third__link" data-aos="fade-up">ПЕРЕЙТИ ДО КОШИКА</a>
+				<a href="basket.html" class="third__link" data-aos="fade-up">ПЕРЕЙТИ ДО КОШИКА</a>
 				<div class="third__info-block info-third">
 					<div class="info-third__img" data-aos="fade-right">
 						<img src="images/system_img/Third_section/03.png" alt="">
