--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 <body>
 	<!-- Внешняя оболочка -->
 	<div class="wrapper">
-
+		<a href="basket.html" class="basket-icon">
+			<img src="images/system_img/basket-icon.png" alt="">
+			<div class="basket-icon__count">0</div>
+		</a>
 		<header class="header" data-aos="fade-down" data-aos-duration="1000">
 
 			<div class="header__container">
