--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<!-- Tittle -->
-	<title>Tittle</title>
+	<title>Grillivery</title>
 
 	<!-- Кодировка -->
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
@@ -36,7 +36,7 @@
 					<a href="delivery.html" class="header__menu-link">ДОСТАВКА</a>
 					<a href="" class="header__menu-link">КОНТАКТИ</a>
 				</nav>
-				<img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo">
+				<a href="index.html"><img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo"></a>
 				<div class="header__contacts">
 					<a class="header__contact-phone"></a>
 					<a class="header__contact-item header__contact-item--insta">
@@ -213,8 +213,8 @@
 				<div class="third__footer">
 					<h3 class="third__title" data-aos="fade-up">грилькурьер</h3>
 					<div class="third__buttons">
-						<button class="third__link" data-aos="fade-left">ЗАМОВИТИ ТЕЛЕФОНОМ</button>
-						<button class="third__link" data-aos="fade-right">ЗАМОВИТИ ТЕЛЕГРАМОМ</button>
+						<a class="third__link third__link--phone" data-aos="fade-left">ЗАМОВИТИ ТЕЛЕФОНОМ</a>
+						<a class="third__link third__link--telegram" data-aos="fade-right">ЗАМОВИТИ ТЕЛЕГРАМОМ</a>
 
 					</div>
 				</div>
@@ -228,51 +228,7 @@
 			<div class="popup__content">
 				<img class="popup__close" src="images/system_img/close.png" alt="">
 				<div class="popup__wrap"></div>
-				<!-- <div class="third__item item-third">
-					<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-					<p class="item-third__name">курица</p>
-					<p class="item-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
-						dapibus non ex eu, cursus lobLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
-						dapibus non ex eu, cursus lobortis sem.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<div class="item-third__price-weight">
-						<span class="item-third__weight">320 грамм</span>
-						<span class="item-third__price">120 грн</span>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-				</div> -->
-			</div>
-		</div>
 
-		<div class="popup" id="popup-second">
-			<div class="popup__content">
-				<img class="popup__close" src="images/system_img/close.png" alt="">
-				<div class="third__item item-third">
-					<div class="item-third__img ibg"><img src="images/system_img/Third_section/02.png" alt=""></div>
-					<p class="item-third__name">пиво</p>
-					<p class="item-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
-						dapibus non ex eu, cursus lobLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
-						dapibus non ex eu, cursus lobortis sem.</p>
-					<select class="select" name="select">
-						<option value="1">first</option>
-
-						<option value="2">second</option>
-					</select>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<div class="item-third__price-weight">
-						<span class="item-third__weight">320 грамм</span>
-						<span class="item-third__price">120 грн</span>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-				</div>
 			</div>
 		</div>
 
