--- a/basket.html
+++ b/basket.html
@@ -4,7 +4,7 @@
 
 <head>
 	<!-- Tittle -->
-	<title>Tittle</title>
+	<title>Grillivery</title>
 
 	<!-- Кодировка -->
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
