--- a/err404.html
+++ b/err404.html
@@ -14,6 +14,7 @@
 	<!-- Подключение CSS файлов -->
 
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -26,8 +27,8 @@
 				<p class="header__burger"><span></span></p>
 
 				<nav class="header__menu">
-					<a href="" class="header__menu-link active">ДОСТАВКА</a>
-					<a href="" class="header__menu-link">КОНТАКТИ</a>
+					<a href="index.html" class="header__menu-link">головна</a>
+					<a href="delivery.html" class="header__menu-link">умови доставки</a>
 				</nav>
 				<a href="index.html"><img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo"></a>
 				<div class="header__contacts">
@@ -61,8 +62,8 @@
 			</div>
 		</header>
 		<div class="burger__menu">
-			<a href="" class="header__menu-link active">ДОСТАВКА</a>
-			<a href="" class="header__menu-link">КОНТАКТИ</a>
+			<a href="index.html" class="header__menu-link">головна</a>
+			<a href="delivery.html" class="header__menu-link">умови доставки</a>
 
 			<div class="header__contacts">
 				<a href="" class="header__contact-item">
@@ -98,8 +99,8 @@
 
 		<div class="err-content">
 			<h1>404</h1>
-			<h2>не туда попал<br>
-				такой страницы нет</h2>
+			<h2>
+				не туди потрапив<br> такої сторінки не існує</h2>
 		</div>
 	</div>
 
