--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/style.css" />
 
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -33,8 +34,8 @@
 				<p class="header__burger"><span></span></p>
 
 				<nav class="header__menu">
-					<a href="delivery.html" class="header__menu-link">ДОСТАВКА</a>
-					<a href="" class="header__menu-link">КОНТАКТИ</a>
+					<a href="index.html" class="header__menu-link active">головна</a>
+					<a href="delivery.html" class="header__menu-link">умови доставки</a>
 				</nav>
 				<a href="index.html"><img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo"></a>
 				<div class="header__contacts">
@@ -67,8 +68,8 @@
 			</div>
 		</header>
 		<div class="burger__menu">
-			<a href="delivery.html" class="header__menu-link">ДОСТАВКА</a>
-			<a href="" class="header__menu-link">КОНТАКТИ</a>
+			<a href="index.html" class="header__menu-link active">головна</a>
+			<a href="delivery.html" class="header__menu-link">умови доставки</a>
 
 			<div class="header__contacts">
 				<a href="" class="header__contact-item header__contact-item--insta">
@@ -131,15 +132,16 @@
 				data-aos-duration="1000" data-aos-delay="1000">
 			<div class="first__wrap">
 				<h1 class="first__title" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">КУРОЧКА ГРИЛЬ
-					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
+					ПРЯМО
+					У ЦЕНТРІ КИЄВА </h1>
 				<button data-link="#third" class="first__button link-btn" data-aos="zoom-in" data-aos-delay="1200"
-					data-aos-offset="0">ПОПРОБУЙ</button>
+					data-aos-offset="0">СКУШТУЙ</button>
 			</div>
 		</section>
 
 		<section class="second">
 			<div class="second__wrap">
-				<h2 class="second__title" data-aos="fade-up">спецIальна пропозицIя</h2>
+				<h2 class="second__title" data-aos="fade-up">КРАЩА ПРОПОЗИЦІЯ</h2>
 				<div class="second__items">
 
 				</div>
@@ -170,7 +172,7 @@
 
 					</div>
 					<div class="info-third__body" data-aos="fade-left">
-						<h4 class="info-third__title">Фiрмова курочка "Grillivery"</h4>
+						<h4 class="info-third__title">ФІРМОВА КУРКА<br> “GRILLIVERY”</h4>
 						<p class="info-third__text">Ми обираємо найсоковитішу курку та маринуємо її 12 годин у особливому
 							соусі за нашим фiрмовим рецептом, котрий ми пiдгледіли у французських кухарiв та модифiкували
 							спецiально для Вас! Це робить м‘ясо ніжним та додає йому особливого смаку! Потім смажемо її у грилі
@@ -195,7 +197,7 @@
 
 					</div>
 					<div class="info-third__body" data-aos="fade-right">
-						<h4 class="info-third__title">крафтовое пиво</h4>
+						<h4 class="info-third__title">КРАФТОВЕ ПИВО “ЦИПА”</h4>
 						<p class="info-third__text">Один з найважливіших інгридієнтів пива - це вода! Крафтова броварня «ципа»
 							знаходиться майже у самому серці Карпат. Та бере свій початок зі справжніх гірських джерел. Тому
 							душа у нашого пива дійсно українська! Ми обираємо якісний німецький солод та кращі сорта хмелю з
@@ -208,10 +210,10 @@
 						кращі сорта хмелю з різних країн. Це додає «Ципі» інтернаціонального смаку та європейської якості! При
 						приготуванні нашого пива використовуються лише природні інгридієнти та консерванти.</p>
 				</div>
-				<h3 class="third__title" data-aos="fade-up">зона безкоштовноI доставки</h3>
+				<h3 class="third__title" data-aos="fade-up">ЗОНА БЕЗКОШТОВНОЇ ДОСТАВКИ</h3>
 				<img src="images/system_img/Third_section/map.png" alt="" class="third__map">
 				<div class="third__footer">
-					<h3 class="third__title" data-aos="fade-up">грилькурьер</h3>
+					<h3 class="third__title" data-aos="fade-up">ГРИЛЬКУР’ЄР</h3>
 					<div class="third__buttons">
 						<a class="third__link third__link--phone" data-aos="fade-left">ЗАМОВИТИ ТЕЛЕФОНОМ</a>
 						<a class="third__link third__link--telegram" data-aos="fade-right">ЗАМОВИТИ ТЕЛЕГРАМОМ</a>
