--- a/delivery.html
+++ b/delivery.html
@@ -14,6 +14,7 @@
 	<!-- Подключение CSS файлов -->
 
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -26,8 +27,8 @@
 				<p class="header__burger"><span></span></p>
 
 				<nav class="header__menu">
-					<a href="delivery.html" class="header__menu-link active">ДОСТАВКА</a>
-					<a href="" class="header__menu-link">КОНТАКТИ</a>
+					<a href="index.html" class="header__menu-link">головна</a>
+					<a href="delivery.html" class="header__menu-link active">умови доставки</a>
 				</nav>
 				<a href="index.html"><img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo"></a>
 				<div class="header__contacts">
@@ -61,8 +62,8 @@
 			</div>
 		</header>
 		<div class="burger__menu">
-			<a href="delivery.html" class="header__menu-link active">ДОСТАВКА</a>
-			<a href="" class="header__menu-link">КОНТАКТИ</a>
+			<a href="index.html" class="header__menu-link ">головна</a>
+			<a href="delivery.html" class="header__menu-link active">умови доставки</a>
 
 			<div class="header__contacts">
 				<a href="" class="header__contact-item">
@@ -97,7 +98,7 @@
 		</div>
 
 		<div class="delivery">
-			<h1 class="delivery__title">Доставка i оплата</h1>
+			<h1 class="delivery__title">Доставка ТА оплата</h1>
 			<p class="delivery__text">Отримати заказ можна двома способами:<br> 1) Безкоштовна - якщо місце заказу
 				знаходиться
 				на відстані 1-го кілометру.<br> 2) На таксі кур‘єром, за тарифами служби уклон (або іньшою на вибір
