--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				<div class="third__info-block info-third">
 					<div class="info-third__img" data-aos="fade-right">
 						<img src="images/system_img/Third_section/03.png" alt="">
-						<h4 class="info-third__title info-third__title--mobile">курочка фирменная</h4>
+						<h4 class="info-third__title info-third__title--mobile">ФІРМОВА КУРКА<br> “GRILLIVERY”</h4>
 
 					</div>
 					<div class="info-third__body" data-aos="fade-left">
@@ -191,7 +191,7 @@
 				</div>
 				<div class="third__info-block info-third">
 					<div class="info-third__img" data-aos="fade-left">
-						<h4 class="info-third__title info-third__title--mobile">крафтовое пиво</h4>
+						<h4 class="info-third__title info-third__title--mobile">КРАФТОВЕ ПИВО “ЦИПА”</h4>
 
 						<img src="images/system_img/Third_section/04.png" alt="">
 
