--- a/basket.html
+++ b/basket.html
@@ -113,6 +113,10 @@
 						<input type="text" id="name" class="input" required>
 					</div>
 					<div class="input-wrap">
+						<label for="phone" class="label">Номер телефону</label>
+						<input type="text" id="phone" class="input" required>
+					</div>
+					<div class="input-wrap">
 						<label for="street" class="label">ВУЛИЦЯ</label>
 						<input type="text" id="street" class="input" required>
 					</div>
