--- a/delivery.html
+++ b/delivery.html
@@ -105,7 +105,7 @@
 				замовника)
 				<br>3) Самовивіз за адресою:<br> Вул. Велика Васильківська 63 паб «Ципа» (М. Олімпійська)
 			</p>
-			<p class="delivery__ps">Оплата переводом на банкIвську картку. Або кур‘эру готIвкою (при доставцI до 1го км).
+			<p class="delivery__ps">Оплата переводом на банкIвську картку. Або кур'єр готIвкою (при доставцI до 1го км).
 			</p>
 		</div>
 	</div>
