--- a/delivery.html
+++ b/delivery.html
@@ -99,14 +99,12 @@
 
 		<div class="delivery">
 			<h1 class="delivery__title">Доставка ТА оплата</h1>
-			<p class="delivery__text">Отримати заказ можна двома способами:<br> 1) Безкоштовна - якщо місце заказу
-				знаходиться
-				на відстані 1-го кілометру.<br> 2) На таксі кур‘єром, за тарифами служби уклон (або іньшою на вибір
-				замовника)
-				<br>3) Самовивіз за адресою:<br> Вул. Велика Васильківська 63 паб «Ципа» (М. Олімпійська)
+			<p class="delivery__text">Отримати замовлення можна наступним чином:<br>1) Безкоштовно - якщо місце замовлення
+				знаходиться на відстані до 1-го кілометру.<br>2) На таксі кур‘єром, за тарифами служби "Uklon" (або іншою на
+				вибір замовника)
+				<br>3) Самовивіз за адресою:<br>Вул. Велика Васильківська 63 паб «Ципа» (М. Олімпійська)
 			</p>
-			<p class="delivery__ps">Оплата переводом на банкIвську картку. Або кур'єр готIвкою (при доставцI до 1го км).
-			</p>
+
 		</div>
 	</div>
 
