add delivery text

--- a/delivery.html
+++ b/delivery.html
@@ -99,6 +99,8 @@
 
 		<div class="delivery">
 			<h1 class="delivery__title">Доставка ТА оплата</h1>
+			<p class="delivery__subtitle">Графік роботи доставки<br>
+				з 15:00 до 23:00</p>
 			<p class="delivery__text">Отримати замовлення можна наступним чином:<br>1) Безкоштовно - якщо місце замовлення
 				знаходиться на відстані до 1-го кілометру.<br>2) На таксі кур‘єром, за тарифами служби "Uklon" (або іншою на
 				вибір замовника)
